a11y violation - sidecar header contrast issue (#190)
* set up automated test submodule

* url for submodule

* testing some changes to pass some parts of build

* try this

* update env var usage

* get rid of slash

* rename module

* change path

* client doesnt have tests

* setup dependencies first

* remove folder

* test-module change

* sed change

* -e ?

*  ''

* check -i

* correct the url

* re add -i

* uncomment line

* update readme

* token and readme change

* css change for contrast

--- a/client/theme/css/themes/carbon-gray10.css
+++ b/client/theme/css/themes/carbon-gray10.css
@@ -25,6 +25,11 @@ body[kui-theme="IBM Light"] {
   --color-text-inverted03: var(--color-text-01);
   --color-tab-selected-inverted: var(--color-name);
 
+  --color-name-sidecar: #30b0ff;
+  --color-red-sidecar: #fb4b53;
+  --color-yellow-sidecar: #fdd13a;
+  --color-green-sidecar: #56d679;
+
   --color-brand-01: #0062ff;
   --color-brand-02: #171717;
   --color-brand-03: #0062ff;
